--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "aadhaar-proxy-goku",
-  "version": "2.0.0",
-  "description": "Aadhaar API Proxy by GOKU",
+  "name": "goku-aadhaar-api",
+  "version": "1.0.0",
+  "description": "Aadhaar API by GOKU",
   "main": "api/index.js",
   "scripts": {
-    "start": "node api/index.js",
-    "dev": "vercel dev"
+    "start": "node api/index.js"
   },
   "dependencies": {
     "node-fetch": "^3.3.2"
   },
   "engines": {
-    "node": ">=20.0.0"
+    "node": "20.x"
   },
-  "keywords": [
-    "api",
-    "proxy",
-    "aadhaar"
-  ],
+  "keywords": ["api", "aadhaar"],
   "author": "goku",
   "license": "MIT"
 }
