--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "goku-aadhaar-api",
   "version": "1.0.0",
   "description": "Aadhaar API by GOKU",
-  "main": "api/index.js",
+  "main": "api.js",
   "scripts": {
-    "start": "node api/index.js"
+    "start": "node api.js"
   },
-  "dependencies": {
-    "node-fetch": "^3.3.2"
-  },
+  "dependencies": {},
   "engines": {
     "node": "20.x"
   },
